# RAG_PDT_QA

./: .env.example  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py
app/services/: __init__.py  ingest.py  storage.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
tests/: test_ingest_endpoint.py  test_ingest_utils.py
